--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <div class="container second">
                 <div class="row">
                     <div class="col-lg">
-                        <h1>Show more about me  <a href="#aboutMe"><img class="animate__animated animate__bounce animate__infinite infinite animate__slower" src="frecciaGiu.png" style="width: 4%;" alt=""></a></h1>
+                        <h1>Show more about me  <a href="#aboutMe"><img class="animate__animated animate__bounce animate__infinite infinite animate__slower" src="img/frecciaGiu.png" style="width: 4%;" alt=""></a></h1>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="row row-cols-3">
                 <div class="col passion">
                     <div>
-                        <img class="img-fluid" src="bartender.jpg">
+                        <img class="img-fluid" src="img/bartender.jpg">
                         <div class="exp">
                             <h3 class="cardW-title">Bartender Pro</h3>
                         </div>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col passion">
                     <div>
-                        <img class="img-fluid" src="dev.jpg">
+                        <img class="img-fluid" src="img/dev.jpg">
                         <div class="exp">
                             <h3 class="cardW-title">Full stack web developer student</h3> 
                         </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col passion">
                     <div>
-                        <img class="img-fluid" src="travel.jpg">
+                        <img class="img-fluid" src="img/travel.jpg">
                         <div class="exp">
                             <h3 class="cardW-title">Travel lover</h3>
                         </div>
@@ -110,7 +110,7 @@
                             <h4 style="padding-bottom: 1%;">Air Pollution in your city</h4>
                         </div>
                         <figure class="figure">
-                            <img src="AirPollution.png" class="figure-img img-fluid rounded">
+                            <img src="img/AirPollution.png" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption"><a style="color:black; text-decoration: none;" target="blank" href="https://github.com/danielerusso95/Get-Air-Pollution">link to gitHub</a></figcaption>
                         </figure>
                         <div class="container">
@@ -122,7 +122,7 @@
                             <h4 style="padding-bottom: 1%;">Rock Paper Scissors</h4>
                         </div>
                         <figure class="figure">
-                            <img src="morraCinese.png" class="figure-img img-fluid rounded">
+                            <img src="img/morraCinese.png" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption"><a style="color:black; text-decoration: none;" target="blank" href="https://github.com/danielerusso95/Rock-Paper-Scissors">link to gitHub</a></figcaption>
                         </figure>
                         <div class="container">
