--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                             <h3 class="cardW-title">Bartender Pro</h3>
                         </div>
                         <a href="#CollapseWork"><button id="CollapseWork" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWork" aria-expanded="false" aria-controls="collapseExample">
-                            Work Exp
+                            Show more
                         </button></a>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                             <h3 class="cardW-title">Full stack web developer student</h3> 
                         </div>
                         <a href="#CollapseDev"><button id="CollapseDev" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDev" aria-expanded="false" aria-controls="collapseExample">
-                            Dev Skills
+                            Show more
                         </button></a>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                             <h3 class="cardW-title">Travel lover</h3>
                         </div>
                         <a href="#CollapseTravel"><button id="CollapseTravel" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTravel" aria-expanded="false" aria-controls="collapseExample">
-                            World
+                            Show more
                         </button></a>
                     </div>
                 </div>
@@ -79,14 +79,14 @@
                 <div class="col collapse-cont">
                     <div class="collapse" id="collapseWork">
                         <div class="card card-body expCard">
-                            7 years in the catering sector, where I held various roles before becoming a cocktail pro.
+                            <p>7 years in the catering sector, where I held various roles before becoming a cocktail pro.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col collapse-cont">
                     <div class="collapse" id="collapseDev">
                         <div class="card card-body expCard">
-                            Graduated in computer science, with a strong passion for this world, I am now back as a student to make it my job
+                            <p>Graduated in computer science, with a strong passion for this world, I am now back as a student to make it my job. Follow my progress in my <a style="text-decoration: none;" target="blank" href="https://talent.start2impact.it/profile/daniele-russo">Start2impact Profile.</a></p>
                         </div>
                     </div>
                 </div>
@@ -99,37 +99,40 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col skills">
+                    <h2 style="margin-bottom: 5%;">Web Developer Skills</h2>
+                    <img class="img-fluid" src="skills.png" alt="">
+                </div>
+            </div>
         </div>
         <div id="project" class="container-fluid">
-            
-                <div class="row"><h1 style="padding-bottom:3%; text-align: center;">My projects!</h1></div>
-                
-                <div class="row projects">
-                    <div class="col project shadow-lg p-3 mb-5 bg-body rounded">
-                        <div class="container">
-                            <h4 style="padding-bottom: 1%;">Air Pollution in your city</h4>
-                        </div>
-                        <figure class="figure">
-                            <img src="AirPollution.png" class="figure-img img-fluid rounded">
-                            <figcaption class="figure-caption"><a style="color:black; text-decoration: none;" target="blank" href="https://github.com/danielerusso95/Get-Air-Pollution">link to gitHub</a></figcaption>
-                        </figure>
-                        <div class="container">
-                            <a target="blank" href="https://air-pollution-464b3.web.app/"><button class="btn btn-primary">Check</button></a>
-                        </div>                        
+            <div class="row"><h1 style="padding-bottom:3%; text-align: center;">My projects!</h1></div>
+            <div class="row projects">
+                <div class="col project shadow-lg p-3 mb-5 bg-body rounded">
+                    <div class="container">
+                        <h4 style="padding-bottom: 1%;">Air Pollution in your city</h4>
                     </div>
-                    <div class="col project shadow-lg p-3 mb-5 bg-body rounded">
-                        <div class="container">
-                            <h4 style="padding-bottom: 1%;">Rock Paper Scissors</h4>
-                        </div>
-                        <figure class="figure">
-                            <img src="morraCinese.png" class="figure-img img-fluid rounded">
-                            <figcaption class="figure-caption"><a style="color:black; text-decoration: none;" target="blank" href="https://github.com/danielerusso95/Rock-Paper-Scissors">link to gitHub</a></figcaption>
-                        </figure>
-                        <div class="container">
-                            <a target="blank" href="https://sassocartaforbici-b4f9e.web.app/"><button class="btn btn-primary">Play</button></a>
-                        </div>
-                    </div> 
+                    <figure class="figure">
+                        <img src="AirPollution.png" class="figure-img img-fluid rounded">
+                            <figcaption class="figure-caption"><a style="color:black; text-decoration: none;" target="blank" href="https://github.com/danielerusso95/Get-Air-Pollution">link to gitHub</a></figcaption>
+                    </figure>
+                    <div class="container">
+                        <a target="blank" href="https://air-pollution-464b3.web.app/"><button class="btn btn-primary">Check</button></a>
+                    </div>                        
                 </div>
+                <div class="col project shadow-lg p-3 mb-5 bg-body rounded">
+                    <div class="container">
+                        <h4 style="padding-bottom: 1%;">Rock Paper Scissors</h4>
+                    </div>
+                    <figure class="figure">
+                        <img src="morraCinese.png" class="figure-img img-fluid rounded">
+                            <figcaption class="figure-caption"><a style="color:black; text-decoration: none;" target="blank" href="https://github.com/danielerusso95/Rock-Paper-Scissors">link to gitHub</a></figcaption>
+                    </figure>
+                    <div class="container">
+                        <a target="blank" href="https://sassocartaforbici-b4f9e.web.app/"><button class="btn btn-primary">Play</button></a>
+                    </div>
+                </div> 
             </div>
         </div>
         <div id="contact" class="container-fluid bg-secondary">
