--- a/public/index.html
+++ b/public/index.html
@@ -174,9 +174,51 @@
           </div>
         </div>
         <div class="row">
-          <div class="col skills">
+          <div class="col-12 skills">
             <h2 style="margin-bottom: 5%">Web Developer Skills</h2>
-            <img class="img-fluid" src="img/skills.png" alt="" />
+            <div class="row justify-content-center">
+              <div class="col-2">
+                <img src="./img/html5.svg" width="100" alt="" />
+              </div>
+              <div class="col-2">
+                <img src="./img/css-3.svg" width="100" alt="" />
+              </div>
+              <div class="col-2">
+                <img src="./img/Bootstrap.svg" width="100" alt="" />
+              </div>
+              <div class="col-2">
+                <img src="./img/javascript.svg" width="100" alt="" />
+              </div>
+              <div class="col-2">
+                <img src="./img/php.svg" width="100" alt="" />
+              </div>
+              <div class="col-2">
+                <img src="./img/sql-server.svg" width="100" alt="" />
+              </div>
+              <div class="col-2 mt-5">
+                <img src="./img/laravel.svg" width="100" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 skills">
+            <h2 style="margin-bottom: 5%">Soft Skills</h2>
+            <div class="row">
+              <div class="col-4">
+                <img src="./img/problemsolving.png" width="100" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="./img/scrum.svg" width="100" alt="" />
+              </div>
+              <div class="col-4">
+                <img
+                  src="https://img.icons8.com/fluent/48/000000/object.png"
+                  width="100"
+                />
+              </div>
+              <div class="col-2"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -256,7 +298,7 @@
           </div>
           <div class="col project shadow-lg p-3 mb-5 bg-body rounded">
             <div class="container">
-              <h4 style="padding-bottom: 1%">Rock Paper Scissors</h4>
+              <h4 style="padding-bottom: 1%">Presto.it</h4>
             </div>
             <figure class="figure">
               <img src="img/presto.png" class="figure-img img-fluid rounded" />
@@ -323,11 +365,17 @@
             </div>
           </div>
         </div>
-        <div class="navbar navbar-dark bg-dark">
-          <a
-            style="font-size: 70%"
-            href="https://it.vecteezy.com/vettori-gratis/sfondo"
+        <div class="footer bg-dark">
+          <a href="https://it.vecteezy.com/vettori-gratis/sfondo"
             >Sfondo Vettori di Vecteezy</a
+          >
+
+          <a href="https://www.freepik.com" class="" title="Freepik"
+            >Icons made by Freepik from</a
+          >
+
+          <a href="https://www.flaticon.com/" class="" title="Flaticon"
+            >www.flaticon.com</a
           >
         </div>
       </div>
