aggiunto link github presto

--- a/public/index.html
+++ b/public/index.html
@@ -151,14 +151,7 @@
               <div class="card card-body expCard">
                 <p>
                   Graduated in computer science, with a strong passion for this
-                  world, I am now back as a student to make it my job. Follow my
-                  progress in my
-                  <a
-                    style="text-decoration: none"
-                    target="blank"
-                    href="https://talent.start2impact.it/profile/daniele-russo"
-                    >Start2impact Profile.</a
-                  >
+                  world, I am now back as a student to make it my job.
                 </p>
               </div>
             </div>
@@ -306,7 +299,7 @@
                 <a
                   style="color: black; text-decoration: none"
                   target="blank"
-                  href="https://github.com/danielerusso95/Rock-Paper-Scissors"
+                  href="https://github.com/danielerusso95/Presto.it"
                   >link to gitHub</a
                 >
               </figcaption>
@@ -315,8 +308,7 @@
               <div class="row">
                 <div class="col-12">
                   <h4 class="text-center">
-                    To view the code or live view contact me to
-                    russo.daniele0@gmail.com
+                    To live view contact me to russo.daniele0@gmail.com
                   </h4>
                 </div>
               </div>
