aggiunto link github presto

--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
             </figure>
             <div class="container">
               <a target="blank" href="https://air-pollution-464b3.web.app/"
-                ><button class="btn btn-primary">Check</button></a
+                ><button class="btn btn-primary">Play</button></a
               >
             </div>
           </div>
