--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
             <div>
               <img class="img-fluid" src="img/dev.jpg" />
               <div class="exp">
-                <h3 class="cardW-title">Full stack web developer student</h3>
+                <h3 class="cardW-title">Junior Fullstack web developer</h3>
               </div>
               <a href="#CollapseDev"
                 ><button
@@ -151,7 +151,7 @@
               <div class="card card-body expCard">
                 <p>
                   Graduated in computer science, with a strong passion for this
-                  world, I am now back as a student to make it my job.
+                  world, this year I have studied to become a web developer.
                 </p>
               </div>
             </div>
