--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
               <div class="card card-body expCard">
                 <p>
                   Graduated in computer science, with a strong passion for this
-                  world, this year I have studied to become a web developer.
+                  world, I have studied to become a web developer.
                 </p>
               </div>
             </div>
