--- a/public/index.html
+++ b/public/index.html
@@ -170,25 +170,25 @@
           <div class="col-12 skills">
             <h2 style="margin-bottom: 5%">Web Developer Skills</h2>
             <div class="row justify-content-center">
-              <div class="col-12 col-md-2">
+              <div class="col-6 mb-3 mb-md-0 col-md-2">
                 <img src="./img/html5.svg" width="100" alt="" />
               </div>
-              <div class="col-12 col-md-2">
+              <div class="col-6 mb-3 mb-md-0 col-md-2">
                 <img src="./img/css-3.svg" width="100" alt="" />
               </div>
-              <div class="col-12 col-md-2">
+              <div class="col-6 mb-3 mb-md-0 col-md-2">
                 <img src="./img/Bootstrap.svg" width="100" alt="" />
               </div>
-              <div class="col-12 col-md-2">
+              <div class="col-6 mb-3 mb-md-0 col-md-2">
                 <img src="./img/javascript.svg" width="100" alt="" />
               </div>
-              <div class="col-12 col-md-2">
+              <div class="col-6 mb-3 mb-md-0 col-md-2">
                 <img src="./img/php.svg" width="100" alt="" />
               </div>
-              <div class="col-12 col-md-2">
+              <div class="col-6 mb-3 mb-md-0 col-md-2">
                 <img src="./img/sql-server.svg" width="100" alt="" />
               </div>
-              <div class="col-12 col-md-2 mt-5">
+              <div class="col-6 mb-3 mb-md-0 col-md-2 mt-5">
                 <img src="./img/laravel.svg" width="100" alt="" />
               </div>
             </div>
@@ -197,14 +197,14 @@
         <div class="row">
           <div class="col-12 skills">
             <h2 style="margin-bottom: 5%">Soft Skills</h2>
-            <div class="row">
-              <div class="col-md-4 col-12">
+            <div class="row justify-content-center">
+              <div class="col-md-4 mb-3 mb-md-0 col-6">
                 <img src="./img/problemsolving.png" width="100" alt="" />
               </div>
-              <div class="col-md-4 col-12">
+              <div class="col-md-4 mb-3 mb-md-0 col-6">
                 <img src="./img/scrum.svg" width="100" alt="" />
               </div>
-              <div class="col-md-4 col-12">
+              <div class="col-md-4 mb-3 mb-md-0 col-6">
                 <img
                   src="https://img.icons8.com/fluent/48/000000/object.png"
                   width="100"
