--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,6 @@
                   width="100"
                 />
               </div>
-              <div class="col-2"></div>
             </div>
           </div>
         </div>
@@ -307,9 +306,9 @@
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h4 class="text-center">
-                    To live view contact me to russo.daniele0@gmail.com
-                  </h4>
+                  <h6 class="text-center">
+                    To live view contact me to <br />russo.daniele0@gmail.com
+                  </h6>
                 </div>
               </div>
             </div>
