--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
         <div class="row">
           <h1 style="padding-bottom: 5%; text-align: center">MySelf!</h1>
         </div>
-        <div class="row row-cols-3">
+        <div class="row row-cols-3 mb-3 skills">
           <div class="col passion">
             <div>
               <img class="img-fluid" src="img/bartender.jpg" />
